# migrations

./: .env.example  .gitignore  .goreleaser.yml  README.md  config.example.json  go.mod  mapping.example.json  migrate.py  migrate.sh
.github/workflows/: release.yml
marzneshin/: .env.example  README.md  migrate.py  pyproject.toml
marzneshin/migration/: config.py  generate_subscription_url_mapping.py  main.py
marzneshin/migration/extractors/: database.py
marzneshin/migration/loaders/: __init__.py  database.py
marzneshin/migration/models/: __init__.py  mappings.py  schemas.py
marzneshin/migration/transformers/: converter.py  validators.py
marzneshin/migration/utils/: helpers.py  logger.py
migration/: config.py  generate_subscription_url_mapping.py  main.py
migration/extractors/: __init__.py  database.py
migration/loaders/: __init__.py  database.py
migration/models/: __init__.py  mappings.py
migration/transformers/: __init__.py  converter.py  validators.py
migration/utils/: __init__.py  helpers.py
redirect-server/: README.md  config.go  install_redirect_server.sh  main.go
